# DevNexus

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  README_EN.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: auto-merge-dependabot.yml  build-desktop.yml  build-macos.yml  ci.yml  release.yml  tag-verify  (+1 more)
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dev_log.rs  lib.rs  main.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: connection_repo.rs  init.rs  mod.rs  mongodb_connection_repo.rs  mysql_connection_repo.rs  s3_connection_repo.rs  ssh_connection_repo.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/api_debugger/: commands.rs  types.rs
src-tauri/src/plugins/confluence/: client.rs  commands.rs  types.rs
src-tauri/src/plugins/lan_chat/: commands.rs  direct.rs  discovery.rs  file_transfer.rs  mod.rs  room.rs  transport.rs  types.rs
src-tauri/src/plugins/mongodb/: client_pool.rs  commands.rs  types.rs
src-tauri/src/plugins/mq/: commands.rs  kafka.rs  mod.rs  rabbitmq.rs  types.rs  utils.rs
src-tauri/src/plugins/mysql/: client_pool.rs  commands.rs  mod.rs  types.rs
src-tauri/src/plugins/network/: commands.rs  types.rs
src-tauri/src/plugins/redis/: commands.rs  mod.rs  pool.rs  types.rs
src-tauri/src/plugins/s3/: client_pool.rs  commands.rs  types.rs
src-tauri/src/plugins/ssh/: commands.rs  key_store.rs  mod.rs  session_pool.rs  terminal.rs  tunnel.rs  types.rs
(+215 files in other folders)
