[package]
name = "devnexus"
version = "0.4.0"
description = "Developer toolbox desktop app"
authors = ["devnexus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "devnexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.29.5", features = ["tokio-comp"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
aes-gcm = "0.10.3"
hex = "0.4.3"
chrono = { version = "0.4.42", features = ["serde"] }
urlencoding = "2.1.3"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
russh = "0.44.0"
russh-keys = "0.44.0"
base64 = "0.22.1"
aws-config = "1.8.11"
aws-sdk-s3 = "1.115.0"
aws-credential-types = "1.2.10"
async-trait = "0.1.89"
mongodb = "3.3.0"
futures-util = "0.3.32"
